@@ -1,13 +1,13 @@
 Package: hht
 Type: Package
 Title: The Hilbert-Huang Transform: Tools and Methods
-Version: 2.1.4
+Version: 2.1.3
 Date: 2015-02-10
 Authors@R: c(person(given="Daniel C.",family="Bowman", role=c("aut", "cre"),
         email="daniel.bowman@unc.edu"),
         person(given="Jonathan M.", family="Lees", role=c("ctb")))
 Depends: R (>= 3.1.1)
-Imports: EMD (>= 1.5.5), fields (>= 6.7.6), spatstat (>= 1.38.1)
+Imports: EMD (>= 1.5.5), fields (>= 6.7.6), spatstat (>= 1.38.1), sfsmisc (>= 1.0.27), pracma (>= 1.8.3)
 Description: This package builds on the EMD package to provide additional tools for empirical mode decomposition (EMD) and Hilbert spectral analysis. It also implements the ensemble empirical decomposition (EEMD) and the complete ensemble empirical mode decomposition (CEEMD) methods to avoid mode mixing and intermittency problems found in EMD analysis.  The package comes with several plotting methods that can be used to view intrinsic mode functions, the HHT spectrum, and the Fourier spectrum. To see the version history and download the bleeding-edge version (at your own risk!), see the project website at code.google.com below.  See the other links for PDF files describing numerical and exact analytical methods for determining instantaneous frequency, some examples of signals processed with this package, and some examples of the ensemble empirical mode decomposition method. 
 License: GPL (>= 3)
 URL: https://code.google.com/p/r-hht/
